crates/oxc_css_parser/tests/error/scss/at-rule/forward/unquoted.snap
---
source: crates/oxc_css_parser/tests/error.rs
---
error: string is expected
  ┌─ unquoted.scss:1:10
  │
1 │ @forward foo;
  │          ^^^


